--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-toast-notifications": "^2.4.4",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
